added small troubleshooting info to README file